# rsync_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
examples/: rsync_client_example.py
launch/: rsync_ros_node.launch
scripts/: rsync_service_node_script
src/: rsync.py  rsync_server_node.py
src/rsync_ros/: rsync.py  rsync_server_node.py  rsync_service_node.py
srv/: RsyncService.srv
