<?xml version="1.0"?>
<package format="2">
  <name>rsync_ros</name>
  <version>0.1.0</version>
  <description>An actionlib interface for Rsync</description>

  <maintainer email="tkostas75@gmail.com">Thomas Kostas</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/image_to_file</url> -->

  <author email="alex.mcclung@hotmail.com">Alex McClung</author>
  <author email="tkostas75@gmail.com">Thomas Kostas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rsync</exec_depend>
</package>
